menifest.yaml
---
# MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: hadeed
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
spec:
  containers:
    - image: mysql:8
      name: mysql
      resources:
        requests:
          memory: "512Mi"
          cpu: "500m"
        limits:
          memory: "1Gi"
          cpu: "1"
      ports:
        - containerPort: 3306
          name: mysql
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-data
      livenessProbe:
        tcpSocket:
          port: 3306
        initialDelaySeconds: 30
        periodSeconds: 10
      readinessProbe:
        exec:
          command: ["mysqladmin", "ping", "-h", "127.0.0.1"]
        initialDelaySeconds: 30
        periodSeconds: 10
  volumes:
    - name: mysql-data
      persistentVolumeClaim:
        claimName: mysql-pvc
---
# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: hadeed
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
---
# BankApp Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp
  namespace: hadeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
      - name: bankapp
        image: hadeedahmed254/cicd:v14
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
      livenessProbe:
        httpGet:
          path: /login
          port: 8080
        initialDelaySeconds: 60
        timeoutSeconds: 5
        periodSeconds: 10
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /login
          port: 8080
        initialDelaySeconds: 60
        timeoutSeconds: 5
        periodSeconds: 10
        failureThreshold: 3
...
# BankApp Service
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
  namespace: hadeed
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: bankapp
